test_suite/tests/macros/ui/derive_provide_order.rs
use dilib::{provide, Inject};

#[provide]
#[derive(Inject)]
struct MyStruct {
    field: u32,
}